--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "ldp"
+name = "trasgoDP"
 version = "0.0.1"
-description = "SIESTA-LDP"
+description = "Local differential privacy mechanisms"
 authors = [
     "Judith Sáinz-Pardo Díaz <sainzpardo@ifca.unican.es>",
     "Álvaro López García <aloga@ifca.unican.es>"
